tests/failing/parser/types.ri
extern "C" fn malloc(sz: usize) *c_void;
extern "C" fn free(pointer: &c_void) c_void; // BAD

struct St {
    f1: &&i32;
    f2: *&i32;
    f3: &*i32;

    f4: ?*u8;

    f5: (i32, i32, i32, i32, i32, i32, i32, i32, i32);

    f6: ??i32;

    f7: c_void;

    f8: pkg;
    f9: =;
}

fn main() void { }
